force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/FLODocs__FLO_Customization_Profile_PS__c.object-meta.xml
<CustomObject>
    <label>FLO Customization Profile PS</label>
    <nameField>
        <label>Flo Profile PS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLO Customization Profile PS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>