force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/fields/FLODocs__Customization__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Customization__c</fullName>
    <label>Customization</label>
    <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
    <relationshipLabel>FLO Customization Profile PS</relationshipLabel>
    <relationshipName>FLO_Customization_Profile_PS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>