force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/fields/FLODocs__Profile_Class_Access__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Profile_Class_Access__c</fullName>
    <label>Profile Class Access</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>