force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/fields/FLODocs__Profile_Field_Permissions__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Profile_Field_Permissions__c</fullName>
    <label>Profile Field Permissions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>