force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/fields/FLODocs__Profile_Layout_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Profile_Layout_Assignment__c</fullName>
    <label>Profile Layout Assignment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>