force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/fields/FLODocs__Profile_Layout_Assignment_Has_Changed__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Profile_Layout_Assignment_Has_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Layout Assignment Has Changed</label>
    <type>Checkbox</type>
</CustomField>