force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/fields/FLODocs__Profile_Page_Access_Has_Changed__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Profile_Page_Access_Has_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Page Access Has Changed</label>
    <type>Checkbox</type>
</CustomField>