force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/fields/FLODocs__Profile_Read_Metadata__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Profile_Read_Metadata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Read Metadata</label>
    <type>Checkbox</type>
</CustomField>