force-app/main/default/objects/FLODocs__FLO_Customization_Profile_PS__c/fields/FLODocs__Profile_RecordType_Visibility__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Profile_RecordType_Visibility__c</fullName>
    <label>Profile RecordType Visibility</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>